--- a/static/global.css
+++ b/static/global.css
@@ -2,3 +2,11 @@ body {
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+.letter {
+	display: inline-flex;
+    width: 2em;
+    height: 2em;
+    align-items: center;
+    justify-content: center;
+}
