--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	font-family: 'Work Sans', courier, sans-serif;
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
 .letter {
